--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="text-3">And I'm a <span class="typing-1"></span></div>
                 <a href="#" class="btn-md">Hire me</a>
             </div>
-            <div class="showcase-img"> <img src="/images/main-pic.png"></div>
+            <div class="showcase-img"> <img src="/images/main-pic.webp"></div>
             <!-- <svg>
                 <img src="SVG/wave (1).svg" alt="">
             </svg> -->
@@ -57,7 +57,7 @@
             <h5 class="title text-center m-heading text-secondary">ABOUT ME</h5>
             <div class="about-content">
                 <div class="column left">
-                    <img src="./images/nihal.png">
+                    <img src="./images/nihal.webp">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Nihal and I'm a <span class="typing-2"></span></div>
@@ -231,28 +231,28 @@
 
         <div class="box">
             <div class="project">
-             <img src="/images/digital.JPG" alt="">
-             <img src="/images/digital.JPG" alt="">
+             <img src="/images/digital.webp" alt="">
+             <img src="/images/digital.webp" alt="">
          </div>
             <div class="project">
-             <img src="/images/pepsi.JPG" alt="">
-             <img src="/images/pepsi.JPG" alt="">
+             <img src="/images/pepsi.webp" alt="">
+             <img src="/images/pepsi.webp" alt="">
          </div>
             <div class="project">
-             <img src="/images/minor1.png" alt="">
-             <img src="/images/minor1.png" alt="">
+             <img src="/images/minor1.webp" alt="">
+             <img src="/images/minor1.webp" alt="">
          </div>
             <div class="project">
-             <img src="/images/shoes.JPG" alt="">
-             <img src="/images/shoes.JPG" alt="">
+             <img src="/images/shoes.webp" alt="">
+             <img src="/images/shoes.webp" alt="">
          </div>
             <div class="project">
-             <img src="/images/together.JPG" alt="">
-             <img src="/images/together.JPG" alt="">
+             <img src="/images/together.webp" alt="">
+             <img src="/images/together.webp" alt="">
          </div>
             <div class="project">
-             <img src="/images/redbull.JPG" alt="">
-             <img src="/images/redbull.JPG" alt="">
+             <img src="/images/redbull.webp" alt="">
+             <img src="/images/redbull.webp" alt="">
          </div>
        
          </div>
