--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="text-3">And I'm a <span class="typing-1"></span></div>
                 <a href="#" class="btn-md">Hire me</a>
             </div>
-            <div class="showcase-img"> <img src="/images/main-pic.webp"></div>
+            <div class="showcase-img"> <img src="./images/main-pic.webp"></div>
             <!-- <svg>
                 <img src="SVG/wave (1).svg" alt="">
             </svg> -->
@@ -231,28 +231,28 @@
 
         <div class="box">
             <div class="project">
-             <img src="/images/digital.webp" alt="">
-             <img src="/images/digital.webp" alt="">
+             <img src="./images/digital.webp" alt="">
+             <img src="./images/digital.webp" alt="">
          </div>
             <div class="project">
-             <img src="/images/pepsi.webp" alt="">
-             <img src="/images/pepsi.webp" alt="">
+             <img src="./images/pepsi.webp" alt="">
+             <img src="./images/pepsi.webp" alt="">
          </div>
             <div class="project">
-             <img src="/images/minor1.webp" alt="">
-             <img src="/images/minor1.webp" alt="">
+             <img src="./images/minor1.webp" alt="">
+             <img src="./images/minor1.webp" alt="">
          </div>
             <div class="project">
-             <img src="/images/shoes.webp" alt="">
-             <img src="/images/shoes.webp" alt="">
+             <img src="./images/shoes.webp" alt="">
+             <img src="./images/shoes.webp" alt="">
          </div>
             <div class="project">
-             <img src="/images/together.webp" alt="">
-             <img src="/images/together.webp" alt="">
+             <img src="./images/together.webp" alt="">
+             <img src="./images/together.webp" alt="">
          </div>
             <div class="project">
-             <img src="/images/redbull.webp" alt="">
-             <img src="/images/redbull.webp" alt="">
+             <img src="./images/redbull.webp" alt="">
+             <img src="./images/redbull.webp" alt="">
          </div>
        
          </div>
