--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         </div>
     </section> 
 
-    <!-- Teams section -->
+    <!-- Projects section -->
 <section class="projects" id="projects">
     <h1>MY PROJECTS</h1>
     <div class="container">
@@ -259,6 +259,8 @@
          <a href="#">slide &rightarrow;</a>
     </div>
 </section>
+<!-- =================================== -->
+
 
 <!-- Contact Me Section -->
 <section class="contact" id="contact">
@@ -268,12 +270,12 @@
             <div class="contact-content">
                 <div class="column left">
                     <h2>Just Say Hello</h2>
-                    <form>
+                    <form action="https://formsubmit.co/165536d7c5f7840e3b55696dcd5f8d15" method="POST">
                         <div class="form-group">
-                            <input type="text" name="name" id="name" placeholder="Your Name">
+                            <input type="text" name="name" id="name" placeholder="Your Name" required>
                         </div>
                         <div class="form-group">
-                            <input type="email" name="email" id="email" placeholder="Your Email">
+                            <input type="email" name="email" id="email" placeholder="Your Email" required>
                         </div>
                         <div class="form-group">
                             <input type="text" name="subject" id="subject" placeholder="Your Subject">
